# warships

./: CMakeLists.txt  CMakeLists.txt.googletest
.github/workflows/: cmake.yml
database/: database.cpp  database.h
entities/: entities.h
entity-operations/captain/: captain.cpp  captain.h
entity-operations/warship/: warship.cpp  warship.h
entity-operations/warship-compartment/: warship-compartment.cpp  warship-compartment.h
tests/create-read-tests/: create-read-tests.cpp
tests/delete-tests/: delete-tests.cpp
tests/update-tests/: update-tests.cpp
